fix modal close button in dark mode

--- a/src/App.css
+++ b/src/App.css
@@ -46,3 +46,8 @@ h5:hover,
 h6:hover {
   cursor: default;
 }
+
+:root.dark .btn-close {
+  background-color: var(--headline);
+  opacity: 1;
+}
